Fix: Correct service paths and nginx proxy configuration
- Fix uvicorn path: /usr/local/bin/uvicorn -> /usr/bin/uvicorn
- Fix nginx proxy_pass: add /api/ suffix for correct routing
- Ensure all services can start properly

--- a/primary/config/nginx/default.conf
+++ b/primary/config/nginx/default.conf
@@ -13,7 +13,7 @@ server {
     
     # API代理
     location /api/ {
-        proxy_pass http://127.0.0.1:9091;
+        proxy_pass http://127.0.0.1:9091/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
