Fix: Add ENABLE_DEPRECATED_TUN_ADDRESS_X environment variable

--- a/primary/config/supervisor/supervisord.conf
+++ b/primary/config/supervisor/supervisord.conf
@@ -17,7 +17,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:sing-box]
 command=/usr/local/bin/sing-box run -D /var/lib/sing-box -c /etc/sing-box/config.json
-environment=ENABLE_DEPRECATED_SPECIAL_OUTBOUNDS="true"
+environment=ENABLE_DEPRECATED_SPECIAL_OUTBOUNDS="true",ENABLE_DEPRECATED_TUN_ADDRESS_X="true"
 autostart=true
 autorestart=true
 startretries=3
